# Kostal

Backup/: featureID_062281.json
Backup/20220726/: Calculate.flex  Kostal.flex  KostalNull.flex  LeftPathNull.flex
Backup/20220727/: Kostal.flex  KostalOriginal.flex
Backup/20220817/programs_A02LS-03-P2-062054_CX01-07-M2-062281_v2.9.1_2022-08-17_16-55-56/programs/specs/robots/flexiv_description/: CMakeLists.txt  README.md  bitbucket-pipelines.yml  package.xml
Backup/20220817/programs_A02LS-03-P2-062054_CX01-07-M2-062281_v2.9.1_2022-08-17_16-55-56/programs/specs/robots/flexiv_description/meshes/A02LD/collision/: desk.stl
Backup/20220817/programs_A02LS-03-P2-062054_CX01-07-M2-062281_v2.9.1_2022-08-17_16-55-56/programs/specs/robots/flexiv_description/meshes/A02LD/visual/: desk.stl
Backup/20220817/programs_A02LS-03-P2-062054_CX01-07-M2-062281_v2.9.1_2022-08-17_16-55-56/programs/specs/robots/flexiv_description/srdf/: A02L.srdf  A02LD.srdf
Backup/20220817/programs_A02LS-03-P2-062054_CX01-07-M2-062281_v2.9.1_2022-08-17_16-55-56/programs/specs/robots/flexiv_description/urdf/: A02H-D.urdf  A02H-D.urdf.xacro  A02H-D_joints_links.xacro  A02H-P.urdf  A02H-P.urdf.xacro  A02H-P_joints_links.xacro  A02L-M.urdf.xacro  A02L-P.urdf  A02L-P.urdf.xacro  A02LD-X.urdf  A02LD-X.urdf.xacro  A02LD_left-X.urdf  A02LD_left-X.urdf.xacro  A02LD_right-X.urdf  A02LD_right-X.urdf.xacro  A02LMR-M.urdf  A02LMR-M.urdf.xacro  A02LMR_joints_links.xacro  A02LS-D.urdf  A02LS-D.urdf.xacro  A02LS-P.urdf  A02LS-P.urdf.xacro  A02L_joints_links.xacro  flexiv_arm_materials.xacro
Depends/: libusb-0.1-4_2%3a0.1.12-32_amd64.deb
Project/: CalculateTCP.flex  KostalTool.xml  LeftPath.flex  RightPath.flex  RightPathNull.flex  mainpathcalok.flex  mainpathok.flex  path1calok.flex  path1ok.flex  path2calokcok.flex  path2ok.flex  path3calok.flex  path3ok.flex  path4calok.flex  path4ok.flex  path5cal.flex  path5ok.flex
RDK0.3/kostal_test/: test_RDK
RDK0.5/: CMakeLists.txt
RDK0.5/include/: StatesData.hpp
RDK0.5/source/: KostalWithSPIPrint.cpp  RPY.cpp  display_robot_states.cpp  kostal.cpp
RDK3.0/kostal_test/: CMakeLists.txt
RDK3.0/kostal_test/build1/: CMakeCache.txt
RDK3.0/kostal_test/build_old/.cmake/api/v1/reply/: codemodel-v2-259db9e4424f65b9e60b.json  target-test-Release-b2cdae3a410308e7af49.json
RDK3.0/kostal_test/build_old/Testing/: TAG
RDK3.0/kostal_test/build_old/Testing/20220117-0918/: Test.xml
RDK3.0/kostal_test/build_old/source/: showplanlist
RDK3.0/kostal_test/bulid/: CMakeCache.txt
RDK3.0/kostal_test/bulid/source/: showplanlist  test
RDK3.0/kostal_test/source/: kolstar copy.cpp  kostal.cpp  test.cpp
RDK3.0/kostal_test/spec/: flexiv_rizon4_kinematics.urdf
RDK5.0/: CMakeLists.txt
RDK5.0/example/: display_robot_states.cpp
RDK5.0/source/: kostal.cpp
(+912 files in other folders)
